seaqt/QtNetwork/gen_qhostaddress.h

class QHostAddress;
class QIPv6Address;
typedef struct QHostAddress QHostAddress;
typedef struct QIPv6Address QIPv6Address;
typedef struct QMetaObject QMetaObject;
QIPv6Address* QIPv6Address_new();
QIPv6Address* QIPv6Address_new_from(QIPv6Address* from);
unsigned char QIPv6Address_operatorSubscript(const QIPv6Address* self, int index);
QHostAddress* QHostAddress_new();
QHostAddress* QHostAddress_new_quint32(unsigned int ip4Addr);
QHostAddress* QHostAddress_new_quint8(const unsigned char* ip6Addr);
QHostAddress* QHostAddress_new_Q_IPV6ADDR(QIPv6Address* ip6Addr);
QHostAddress* QHostAddress_new_QString(struct seaqt_string address);
QHostAddress* QHostAddress_new_QHostAddress(QHostAddress* from);
QHostAddress* QHostAddress_new_QHostAddress_SpecialAddress(int address);
void QHostAddress_operatorAssign_from(QHostAddress* self, QHostAddress* from);
void QHostAddress_operatorAssign_address(QHostAddress* self, int address);
void QHostAddress_swap(QHostAddress* self, QHostAddress* other);
void QHostAddress_setAddress_quint32(QHostAddress* self, unsigned int ip4Addr);
void QHostAddress_setAddress_quint8(QHostAddress* self, const unsigned char* ip6Addr);
void QHostAddress_setAddress_Q_IPV6ADDR(QHostAddress* self, QIPv6Address* ip6Addr);
bool QHostAddress_setAddress_QString(QHostAddress* self, struct seaqt_string address);
void QHostAddress_setAddress_QHostAddress_SpecialAddress(QHostAddress* self, int address);
int QHostAddress_protocol(const QHostAddress* self);
unsigned int QHostAddress_toIPv4Address(const QHostAddress* self);
QIPv6Address* QHostAddress_toIPv6Address(const QHostAddress* self);
struct seaqt_string QHostAddress_toString(const QHostAddress* self);
struct seaqt_string QHostAddress_scopeId(const QHostAddress* self);
void QHostAddress_setScopeId(QHostAddress* self, struct seaqt_string id);
bool QHostAddress_isEqual_address(const QHostAddress* self, QHostAddress* address);
bool QHostAddress_operatorEqual_QHostAddress(const QHostAddress* self, QHostAddress* address);
bool QHostAddress_operatorEqual_QHostAddress_SpecialAddress(const QHostAddress* self, int address);
bool QHostAddress_operatorNotEqual_QHostAddress(const QHostAddress* self, QHostAddress* address);
bool QHostAddress_operatorNotEqual_QHostAddress_SpecialAddress(const QHostAddress* self, int address);
bool QHostAddress_isNull(const QHostAddress* self);
void QHostAddress_clear(QHostAddress* self);
bool QHostAddress_isInSubnet_subnet_netmask(const QHostAddress* self, QHostAddress* subnet, int netmask);
bool QHostAddress_isInSubnet_subnet(const QHostAddress* self, struct seaqt_map /* tuple of QHostAddress* and int */  subnet);
bool QHostAddress_isLoopback(const QHostAddress* self);
bool QHostAddress_isGlobal(const QHostAddress* self);
bool QHostAddress_isLinkLocal(const QHostAddress* self);
bool QHostAddress_isSiteLocal(const QHostAddress* self);
bool QHostAddress_isUniqueLocalUnicast(const QHostAddress* self);
bool QHostAddress_isMulticast(const QHostAddress* self);
bool QHostAddress_isBroadcast(const QHostAddress* self);
bool QHostAddress_isPrivateUse(const QHostAddress* self);
struct seaqt_map /* tuple of QHostAddress* and int */  QHostAddress_parseSubnet(struct seaqt_string subnet);
unsigned int QHostAddress_toIPv4Address_ok(const QHostAddress* self, bool* ok);
bool QHostAddress_isEqual_address_mode(const QHostAddress* self, QHostAddress* address, int mode);
const QMetaObject* QHostAddress_staticMetaObject();